<resources>
    <string name="app_name">Saglikli Yasam</string>
    <string name="appTitle">SAĞLIKLI YAŞAM</string>
    <string name="logo">logo</string>
    <string name="e_mail">E-Mail</string>
    <string name="password">Şifre</string>
    <string name="sign_in">Giriş Yap</string>
    <string name="forgot_password">Şifremi Unuttum</string>
    <string name="cover">cover</string>
    <string name="title_place_holder">Title Place Holder</string>
    <string name="time_place_holder">Time Place Holder</string>
    <string name="height">Boy (cm)</string>
    <string name="weight">Kilo (kg)</string>
    <string name="calculate">Hesapla</string>
    <string name="design">design</string>
    <string name="onborading_text1">Su İçme, Duruş Düzeltme, Öğün Saati ve İlaç Saati Bildirimleriyle Organize Olun</string>
    <string name="go_on">Devam</string>
    <string name="button">buton</string>
    <string name="necessaries">1 Adet Malzeme, 2 Adet Malzeme, 1 Adet Malzeme, 2 Adet Malzeme, 1 Adet Malzeme</string>
    <string name="description">Lorem ipsum dolor sit amet.</string>
    <string name="nick_name">Kullanıcı Adı</string>
    <string name="sign_up">Kayıt Ol</string>
    <string name="onboarding_text2">Vücut Kitle İndeksi Ölçümü Yapın</string>
    <string name="onboarding_text3">Motivasyon Mesajları Alın</string>
    <string name="onboarding_text4">Egzersizlere Ve Sağlıklı Tariflere Kolayca Ulaşın</string>
    <string name="finished">Bitir</string>
    <string name="enter_your_info">Bilgilerinizi Giriniz!</string>
    <string name="enter_your_email">E Mail Adresinizi Giriniz!</string>
    <string name="link_sent">Yeni parola için gerekli bağlantı adresinize gönderildi!</string>
    <string name="email_sending_error">Mail gönderme hatası!</string>
    <string name="menu_recipes">Sağlıklı Tarifler</string>
    <string name="menu_exercises">Egzersizler</string>
    <string name="menu_bmi">Vücut Kitle İndeksi Hesapla</string>
    <string name="medicines_time">İlaç Saatleri</string>
    <string name="time_floating_action_button">timeFloatingActionButton</string>
    <string name="medicine_name">İlaç ismi</string>
    <string name="add_medicine">İlaç Saati Ekle</string>
    <string name="medicine_time">İlaç Saati</string>
    <string name="meals_time">Öğün Saatleri</string>
    <string name="meal_name">Öğün İsmi</string>
    <string name="meal_time">Öğün Saati</string>
    <string name="add_meal">Öğün Ekle</string>
    <string name="glass">glass</string>
    <string name="water">water</string>
    <string name="water_title">Tüketilen Su Miktarı</string>
    <string name="amount">0</string>
    <string name="water_drinking">Su İçme</string>
    <string name="title1">EGZERSİZLER</string>
    <string name="title2">KONTROLLER</string>
    <string name="meals">Öğünler</string>
    <string name="drink_water">Su İçme</string>
    <string name="medicines">İlaçlar</string>
    <string name="title3">SAĞLIKLI TARİFLER</string>
    <string name="result_title">SONUÇ</string>
    <string name="result_holder">Result Holder</string>
    <string name="bmi_title">VÜCUT KİTLE ENDEKSİNİZ</string>
    <string name="weight_title">İDEAL KİLONUZ</string>
    <string name="error">Hata, Tekrar Deneyiniz!</string>
    <string name="titleNecessaries">Malzemeler</string>
    <string name="titleDescription">Yapılışı</string>
    <string name="glass_title">Bardak</string>

</resources>