<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/night_secondary_text"
    android:orientation="vertical"
    tools:context=".presentation.ui.fragment.exercise_detail.ExerciseDetailFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/exerciseCover"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:contentDescription="@string/cover"
                android:scaleType="fitXY"
                android:src="@drawable/exercise" />

            <TextView
                android:id="@+id/exerciseTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:lines="2"
                android:text="@string/title_place_holder"
                android:textColor="@color/night_primary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/exerciseTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:lines="1"
                android:text="@string/time_place_holder"
                android:textColor="@color/night_primary_dark"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/exerciseDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/description"
                android:textColor="@color/night_primary_dark"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/titleDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="5dp"
                android:lines="1"
                android:text="@string/titleDescription"
                android:textColor="@color/night_primary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/exercise"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/description"
                android:textColor="@color/night_primary_dark"
                android:textSize="14sp" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>