<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_light"
    tools:context=".presentation.ui.fragment.water_drinking.WaterDrinkingFragment">


    <ImageView
        android:id="@+id/glass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/glass"
        android:src="@drawable/glass"
        app:layout_constraintBottom_toTopOf="@+id/water"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/water"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/water"
        android:scaleType="fitXY"
        android:src="@drawable/water"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/positiveFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/night_primary_light"
        android:clickable="true"
        android:contentDescription="@string/button"
        android:focusable="true"
        android:src="@drawable/positive"
        app:layout_constraintBottom_toBottomOf="@+id/glass"
        app:layout_constraintEnd_toEndOf="parent"
        app:maxImageSize="18dp"
        app:tint="@color/white"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/negativeFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/night_primary_light"
        android:clickable="true"
        android:contentDescription="@string/button"
        android:focusable="true"
        android:src="@drawable/negative"
        app:layout_constraintBottom_toBottomOf="@+id/glass"
        app:layout_constraintStart_toStartOf="parent"
        app:maxImageSize="18dp"
        app:rippleColor="@color/night_primary_light"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/WaterTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/water_title"
        android:textAlignment="center"
        android:textColor="@color/night_primary_light"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/glass"
        app:layout_constraintEnd_toStartOf="@+id/positiveFab"
        app:layout_constraintStart_toEndOf="@+id/negativeFab" />

    <TextView
        android:id="@+id/amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/amount"
        android:textColor="#616161"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/WaterTitleTextView" />

    <TextView
        android:id="@+id/glassTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/glass_title"
        android:textAlignment="center"
        android:textColor="@color/night_primary_light"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/positiveFab"
        app:layout_constraintStart_toEndOf="@+id/negativeFab"
        app:layout_constraintTop_toBottomOf="@+id/amount" />

</androidx.constraintlayout.widget.ConstraintLayout>