<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_light"
    tools:context=".presentation.ui.onboarding.screens.ThirdOnboardingFragment">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="422dp"
        android:layout_height="704dp"
        android:contentDescription="@string/design"
        android:src="@drawable/onboarding_shape3"
        android:scaleType = "fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/description4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.91"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/stay_healthy_eat_healty"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/description4"
        android:layout_width="307dp"
        android:layout_height="53dp"
        android:layout_marginTop="372dp"
        android:text="@string/onboarding_text4"
        android:textAlignment="center"
        android:textColor="@color/night_primary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView5" />

    <Button
        android:id="@+id/FinishButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/night_primary"
        android:text="@string/finished"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>