<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.fragment.medicineAdd.MedicineAddFragment"
    android:background="@color/primary_light">

    <EditText
        android:id="@+id/editTextMedicine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="116dp"
        android:background="@color/primary"
        android:backgroundTint="@color/primary"
        android:ems="10"
        android:hint="@string/medicine_name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp"

        android:textColor="@color/night_primary_dark"
        android:textColorHint="@color/primary_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editTextTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="28dp"
        android:background="@color/primary"
        android:backgroundTint="@color/primary"
        android:ems="10"
        android:hint="@string/medicine_time"
        android:importantForAutofill="no"
        android:inputType="time"
        android:minHeight="48dp"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp"

        android:textColor="@color/night_primary_dark"
        android:textColorHint="@color/primary_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextMedicine"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="@color/night_primary_light"
        android:minHeight="50dp"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp"
        android:text="@string/add_medicine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTime"
        tools:ignore="TextContrastCheck" />




</androidx.constraintlayout.widget.ConstraintLayout>